# NostalgiaEngine

./: .clang-format  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  README.md
Nostalgia/: CMakeLists.txt
Nostalgia/include/Nostalgia/: CCamera.hpp  CTransform.hpp  CVertex.hpp  CVertexArrayObject.hpp  CVertexBufferObject.hpp  Nostalgia.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp  core.hpp  utils.hpp
Nostalgia/include/Nostalgia/Application/: Application.hpp
Nostalgia/include/Nostalgia/Core/: core.hpp  exceptions.hpp  types.hpp
Nostalgia/include/Nostalgia/Shader/: ShaderProgram.hpp
Nostalgia/include/Nostalgia/application/: CApplication.hpp
Nostalgia/include/Nostalgia/application/events/: SKeyCallback.hpp
Nostalgia/include/Nostalgia/mesh/: CMesh.hpp
Nostalgia/include/Nostalgia/shader/: CShaderProgram.hpp
Nostalgia/src/Nostalgia/: CCamera.cpp  CTransform.cpp  CVertex.cpp  CVertexArrayObject.cpp  CVertexBufferObject.cpp  Nostalgia.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
Nostalgia/src/Nostalgia/Application/: Application.cpp
Nostalgia/src/Nostalgia/Shader/: ShaderProgram.cpp
Nostalgia/src/Nostalgia/application/: CApplication.cpp
Nostalgia/src/Nostalgia/mesh/: CMesh.cpp
Nostalgia/src/Nostalgia/shader/: CShaderProgram.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
